Add staging domain to internal domains

--- a/_config.checks.yml
+++ b/_config.checks.yml
@@ -27,6 +27,7 @@ html-proofer:
 
   :internal_domains:
     - devdocs.magento.com
+    - devdocs.magedevteam.com
 
   # Ignore any link that includes a specified pattern
   # :url_ignore:
