--- a/_data/toc/mftf.yml
+++ b/_data/toc/mftf.yml
@@ -116,6 +116,10 @@ pages:
       - label: Locator functions
         url: /mftf/docs/section/locator-functions.html
         versionless: true
+      
+      - label: Selectors
+        url: /mftf/docs/selectors.html
+        versionless: true
 
   - label: Suite
     url: /mftf/docs/suite.html
