--- a/_config.checks.yml
+++ b/_config.checks.yml
@@ -5,7 +5,7 @@
 html-proofer:
 
   # Do not check external links.	
-  :disable_external: true
+  :disable_external: false
 
   # Report only errors that fall within the 4xx status code range.
   :only_4xx: true
