--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -73,6 +73,9 @@ pages:
 
         - label: urlResolver query
           url: /graphql/queries/url-resolver.html
+
+        - label: wishlist query
+          url: /graphql/queries/wishlist.html
         
     - label: Mutations
       children:
@@ -189,9 +192,6 @@ pages:
 
             - label: redeemGiftCardBalanceAsStoreCredit mutation
               url: /graphql/reference/redeem-giftcard-balance.html
-
-            - label: Wishlist endpoint
-              url: /graphql/reference/wishlist.html
 
     - label: Payment methods
       children:
