Add information about the TrimInput widget

--- a/_data/toc/javascript-developer-guide.yml
+++ b/_data/toc/javascript-developer-guide.yml
@@ -99,3 +99,6 @@ pages:
 
         - label: ToggleAdvanced widget
           url: /javascript-dev-guide/widgets/widget_toggle.html
+
+        - label: TrimInput widget
+          url: /javascript-dev-guide/widgets/widget_trimInput.html
