moving to 2.3 and updating toc and index

--- a/_data/toc/rest-api.yml
+++ b/_data/toc/rest-api.yml
@@ -111,6 +111,11 @@ pages:
         url: /rest/tutorials/bulk-configurable-product/config-product-intro.html
         include_versions: ["2.3"]
 
+      - label: Create and manage grouped products
+        class: tutorial
+        url: /rest/tutorials/grouped-products/create-and-manage-grouped-products.html
+        include_versions: ["2.3"]
+
     - label: Modules
       children:
 
