--- a/_data/toc/mftf.yml
+++ b/_data/toc/mftf.yml
@@ -52,7 +52,7 @@ pages:
     versionless: true
 
   - label: Merge points for extensions
-    url: /mftf/docs/test-prep.html
+    url: /mftf/docs/merge_points/introduction.html
     versionless: true
     children:
 
