--- a/_data/toc/mftf.yml
+++ b/_data/toc/mftf.yml
@@ -146,7 +146,7 @@ pages:
         url: /mftf/docs/test/assertions.html
         versionless: true
 
-      - label: MFTF Functional Test Reference
+      - label: MFTF functional test reference
         url: /mftf/docs/mftf-tests.html
         versionless: true
 
