Add documentation about popupWindow widget

--- a/_data/toc/javascript-developer-guide.yml
+++ b/_data/toc/javascript-developer-guide.yml
@@ -85,6 +85,9 @@ pages:
         - label: PasswordStrengthIndicator widget
           url: /javascript-dev-guide/widgets/widget_password_strength_indicator.html
 
+        - label: PopupWindow widget
+          url: /javascript-dev-guide/widgets/widget-popup-window.html
+
         - label: Prompt widget
           url: /javascript-dev-guide/widgets/widget_prompt.html
 
