--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -22,7 +22,7 @@ entries:
   date: August 2, 2019
   link: https://github.com/magento/devdocs/pull/5111
 - description: Added a new task topic for [setting the cache time-to-live (TTL) for
-    static files](https://devdocs.magento.com/guides/v2.3/cloud/project/set-cache.md)
+    static files](https://devdocs.magento.com/guides/v2.3/cloud/project/set-cache.html)
     on Magento Commerce (Cloud).
   versions: 2.2.x, 2.3.x
   type: New topic
