--- a/_data/toc/mftf.yml
+++ b/_data/toc/mftf.yml
@@ -9,6 +9,10 @@ pages:
     url: /mftf/docs/getting-started.html
     versionless: true
 
+ - label: Action group reference
+    url: /mftf/docs/actiongroup-list.html
+    versionless: true
+
   - label: Best practices
     versionless: true
     children:
@@ -49,6 +53,10 @@ pages:
 
   - label: Extending
     url: /mftf/docs/extending.html
+    versionless: true
+
+  - label: MFTF functional test reference
+    url: /mftf/docs/mftf-tests.html
     versionless: true
 
   - label: Merge points for extensions
@@ -98,6 +106,10 @@ pages:
 
   - label: Page
     url: /mftf/docs/page.html
+    versionless: true
+
+  - label: Preparing a test for MFTF
+    url: /mftf/docs/test-prep.html
     versionless: true
 
   - label: Reporting
