--- a/_data/toc/mftf.yml
+++ b/_data/toc/mftf.yml
@@ -9,7 +9,7 @@ pages:
     url: /mftf/docs/getting-started.html
     versionless: true
 
- - label: Action group reference
+  - label: Action group reference
     url: /mftf/docs/actiongroup-list.html
     versionless: true
 
@@ -152,6 +152,10 @@ pages:
 
       - label: Assertions
         url: /mftf/docs/test/assertions.html
+        versionless: true
+
+      - label: MFTF functional test reference
+        url: /mftf/docs/mftf-tests.html
         versionless: true
 
   - label: Troubleshooting
