--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -47,6 +47,10 @@ pages:
 
     - label: Queries
       children:
+
+        - label: checkoutAgreements query
+          url: /graphql/queries/checkout-agreements.html
+
         - label: cmsBlock query
           url: /graphql/queries/cms-block.html
 
@@ -71,6 +75,9 @@ pages:
         - label: getHostedProUrl query
           url: /graphql/queries/get-hosted-pro-url.html
 
+        - label: getPayflowLinkToken query
+          url: /graphql/queries/get-payflow-link-token.html
+
         - label: storeConfig query
           url: /graphql/queries/store-config.html
 
@@ -85,12 +92,21 @@ pages:
         - label: applyStoreCreditToCart mutation
           url: /graphql/mutations/apply-store-credit.html
 
+        - label: createPayflowProToken mutation
+          url: /graphql/mutations/paypal-create-payflow-pro-token.html
+
         - label: deletePaymentToken mutation
           url: /graphql/mutations/delete-payment-token.html
 
+        - label: handlePayflowProResponse mutation
+          url: /graphql/mutations/paypal-handle-payflow-pro-response.html
+
+        - label: redeemGiftCardBalanceAsStoreCredit mutation
+          url: /graphql/mutations/redeem-giftcard-balance.html
+
         - label: removeStoreCreditFromCart mutation
           url: /graphql/mutations/remove-store-credit.html
-    
+
     - label: Reference
       children:
             - label: CustomAttributeMetadata endpoint
@@ -98,15 +114,6 @@ pages:
 
             - label: Customer endpoint
               url: /graphql/reference/customer.html
-
-            - label: Payflow Link getPayflowLinkToken query
-              url: /graphql/reference/paypal-get-payflow-link-token.html
-
-            - label: Payflow Pro createPayflowProToken mutation
-              url: /graphql/reference/paypal-create-payflow-pro-token.html
-
-            - label: Payflow Pro handlePayflowProResponse mutation
-              url: /graphql/reference/paypal-handle-payflow-pro-response.html
 
             - label: Products endpoint
               url: /graphql/reference/products.html
@@ -189,9 +196,6 @@ pages:
 
                 - label: updateCartItems mutation
                   url: /graphql/reference/quote-update-cart-items.html
-
-            - label: redeemGiftCardBalanceAsStoreCredit mutation
-              url: /graphql/reference/redeem-giftcard-balance.html
 
     - label: Payment methods
       children:
