--- a/_data/codebase/v2_3/open-source/bin-magento.yml
+++ b/_data/codebase/v2_3/open-source/bin-magento.yml
@@ -5107,7 +5107,7 @@ commands:
 
         <comment>bin/magento queue:consumers:start someConsumer --area-code='adminhtml'</comment>
 
-    To do not run multiple copies of one consumer simultaneously:
+    To prevent multiple copies of a consumer from running at the same time, run the consumer with the `single-thread`option: 
 
         <comment>%command.full_name% someConsumer --single-thread'</comment>
 
